<resources>
    <string name="app_name">METAGEM</string>
    <string name="login_input_user">手机号码或者邮箱</string>
    <string name="login_verification">验证码</string>
    <string name="login_get_verification">获取验证码</string>
    <string name="login_input_pwd">输入密码</string>
    <string name="login_protocol"><u>点击创建账户,表示您同意隐私条款</u></string>
    <string name="register">创建账号</string>
    <string name="or_login">或者,登录</string>
    <string name="login">登录</string>
    <string name="or_register">或者,创建账号</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="net_unavailable_tips">网络不可用</string>
    <string name="input_register_user_empty">手机号码或者邮箱不能为空</string>
    <string name="input_register_user_error">手机号码或邮箱格式不正确</string>
    <string name="phone_number_format_error">手机号码格式不正确</string>
    <string name="pelease_get_verification_first">请先获取验证码</string>
    <string name="verification_empty">验证码不能为空</string>
    <string name="verification_has_timeout">验证码已过期</string>
    <string name="verification_error">验证码不正确</string>
    <string name="input_register_pwd_empty">密码不能为空</string>
    <string name="input_register_pwd_match">密码只能是数字或英文字母</string>
    <string name="input_register_pwd_length">设置密码长度必须是6到16位</string>
    <string name="read_registered_protocol">请先同意隐私条款</string>
    <string name="registered_ok">注册成功</string>
    <string name="registered_failed">注册失败</string>
    <string name="reset_pwd_input_new">输入新密码</string>
    <string name="reset_pwd_ok">重置密码</string>
    <string name="reset_pwd_suc">重置密码成功</string>
    <string name="reset_pwd_fail">重置密码失败</string>
    <string name="reset_pwd_new_empty">新密码不能为空</string>
    <string name="verification_send_suc">验证码发送成功</string>
    <string name="verification_send_fail">验证码发送失败</string>
    <string name="reget_verification">重新获取验证码</string>
    <string name="verification_timer_count">发送中(%1$d秒)</string>
    <string name="sunscreen_recent">您近期使用的防晒霜指数</string>
    <string name="info_weight">体重</string>
    <string name="info_height">身高</string>
    <string name="info_continue">继续</string>
    <string name="have_account">已经有账户了吗？</string>
    <string name="info_gender">性别</string>
    <string name="gender_male">男</string>
    <string name="gender_femal">女</string>
    <string name="info_birthday">出生日期</string>
    <string name="info_name">请输入昵称</string>
    <string name="splash_start">开启智能健康生活</string>
    <string name="login_suc">登录成功</string>
    <string name="login_fail">登录失败</string>
    <string name="info_user_name_empty">请输入用户名</string>
    <string name="info_user_birthday_empty">请输入出生日期</string>
    <string name="select_birthday">选择生日</string>
    <string name="info_user_gender_empty">请输入性别</string>
    <string name="info_user_height_empty">请输入身高</string>
    <string name="info_user_weight_empty">请输入体重</string>
    <string name="mine_smart">我的智能珠宝</string>
    <string name="smart_moonlight">暮光</string>
    <string name="smart_ushow">U秀</string>
    <string name="smart_cool">炫付</string>
    <string name="smart_online">在线</string>
    <string name="smart_offline">离线</string>
    <string name="smart_binded">已绑定</string>
    <string name="smart_unbind">未绑定</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_reconnect">Reconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="title_activity_login2">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Avatar -->
    <string name="preparing_card">准备SD卡</string>
    <string name="no_storage_card">无SD卡</string>
    <string name="not_enough_space">没有足够的空间</string>
    <string name="clip_tip">拖动边框可调节裁剪区域</string>
    <string name="no_find_picture">没有找到图片</string>
    <string name="upload">上传</string>
    <string name="pic_upload_ok">图片上传成功</string>
    <string name="pic_upload_failed">图片上传失败,请重试</string>
    <string name="gallery_select_pic">轻选择相片</string>
    <string name="upload_userinfo_ok">保存用户信息成功</string>
    <string name="upload_userinfo_fail">保存用户信息失败</string>

    <!-- 个人信息 -->
    <string name="mine_info">个人信息</string>
    <string name="mine_nickname">昵称</string>
    <string name="mine_birthday">出生日期</string>
    <string name="mine_gender">性别</string>
    <string name="mine_height">身高</string>
    <string name="mine_weight">体重</string>
    <string name="mine_phone">手机号码</string>
    <string name="mine_email">邮箱</string>
    <string name="mine_reset_pwd">修改密码</string>
    <string name="photo_choice_mode">选择方式</string>
    <string name="photo_mode_camera">相机拍摄</string>
    <string name="photo_mode_gallery">相册选取</string>

    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
        <string name="intro_message">
        <![CDATA[


            This sample demonstrates the basic use of Camera2 API. Check the source code to see how
            you can display camera preview and take pictures.


        ]]>
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_internet">网络不通</string>
    <string name="generic_server_down">服务器故障</string>
    <string name="generic_error">通用错误</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
