<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/info2__height_llt"
            style="@style/ListBackgroundRightAngleNoFullStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_margin_30"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/login_padding_10">

            <TextView
                style="@style/BaseTextStyle"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/login_margin_10"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/info_height" />

            <TextView
                android:id="@+id/info2_height"
                style="@style/BaseTextStyle"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:drawablePadding="@dimen/login_padding_10"
                android:drawableRight="@mipmap/ic_arrow_left"
                android:gravity="right|center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/info2__weight_llt"
            style="@style/ListBackgroundRightAngleNoFullStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_margin_30"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/login_padding_10">

            <TextView
                style="@style/BaseTextStyle"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/login_margin_10"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/info_weight" />

            <TextView
                android:id="@+id/info2_weight"
                style="@style/BaseTextStyle"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:drawablePadding="@dimen/login_padding_10"
                android:drawableRight="@mipmap/ic_arrow_left"
                android:gravity="right|center" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/info2_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/info2_have_account"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/login_margin_30"
        android:layout_marginLeft="@dimen/login_padding_30"
        android:layout_marginRight="@dimen/login_padding_30"
        android:background="@drawable/persional_info_corner_border"
        android:text="@string/info_continue" />

    <Button
        android:id="@+id/info2_have_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/login_white_rect_border"
        android:text="@string/have_account" />
</RelativeLayout>