<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dip">

        <ImageView
            android:id="@+id/reset_pwd_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dip"
            android:src="@android:drawable/ic_delete" />

        <TextView
            android:id="@+id/reset_pwd_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/reset_pwd_ok" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/reset_pwd_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/reset_pwd_appname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingTop="10dip"
            android:text="METAGEM"
            android:textSize="16sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical">

        <EditText
            android:id="@+id/reset_pwd_user"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_height"
            android:layout_marginTop="@dimen/login_margin_10"
            android:background="@drawable/login_white_rect_border"
            android:hint="@string/login_input_user"
            android:paddingLeft="@dimen/login_padding_10"
            android:textColorHint="@color/login_gray_txt_color"
            android:textSize="@dimen/login_edit_txt_m" />

        <EditText
            android:id="@+id/reset_pwd_new"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_height"
            android:layout_marginTop="@dimen/login_margin_10"
            android:background="@drawable/login_white_rect_border"
            android:hint="@string/reset_pwd_input_new"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/login_padding_10"
            android:textColorHint="@color/login_gray_txt_color"
            android:textSize="@dimen/login_edit_txt_s" />

        <TextView
            android:id="@+id/reset_pwd_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/login_margin_20"
            android:background="@drawable/login_white_rect_border"
            android:paddingBottom="@dimen/login_padding_10"
            android:paddingLeft="@dimen/login_padding_30"
            android:paddingRight="@dimen/login_padding_30"
            android:paddingTop="@dimen/login_padding_10"
            android:text="@string/reset_pwd_ok"
            android:textSize="@dimen/login_edit_txt_m" />
    </LinearLayout>
</LinearLayout>